--- a/package.json
+++ b/package.json
@@ -30,6 +30,13 @@
   "devDependencies": {
     "@ejhammond/eslint-plugin": "^4.0.0",
     "eslint": "^7.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   },
@@ -43,6 +50,8 @@
     "@semantic-release/github": "^5.5.5",
     "@semantic-release/npm": "^5.3.5",
     "@semantic-release/release-notes-generator": "^7.3.5",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "conventional-changelog-eslint": "^3.0.4",
     "cross-spawn": "^7.0.1",
     "dotenv": "^8.2.0",
