--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   release:
     docker:
-      - image: circleci/node:17.2
+      - image: cimg/node:18.18.0
     working_directory: ~/repo
 
     steps:
