--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "author": "EJ Hammond <ejhammond@hey.com>",
   "description": "Common configurations for js/ts projects",
   "repository": "https://github.com/ejhammond/jskit",
-  "engines": {
-    "node": "17.2"
-  },
   "publishConfig": {
     "access": "public"
   },
@@ -28,36 +25,34 @@
     "release": "node ./bin/release.js"
   },
   "devDependencies": {
-    "@ejhammond/eslint-plugin": "^4.0.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.1.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.4.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
-  "peerDependencies": {
-    "@ejhammond/eslint-plugin": "^4.0.0"
-  },
+  "peerDependencies": {},
   "dependencies": {
-    "@commitlint/cli": "^9.1.2",
-    "@semantic-release/commit-analyzer": "^6.3.3",
-    "@semantic-release/git": "^7.0.18",
-    "@semantic-release/github": "^5.5.5",
-    "@semantic-release/npm": "^5.3.5",
-    "@semantic-release/release-notes-generator": "^7.3.5",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "conventional-changelog-eslint": "^3.0.4",
+    "@commitlint/cli": "^17.7.1",
+    "@ejhammond/eslint-plugin": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^11.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.0.6",
+    "@semantic-release/npm": "^11.0.0",
+    "@semantic-release/release-notes-generator": "^12.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "conventional-changelog-eslint": "^5.0.0",
     "cross-spawn": "^7.0.1",
-    "dotenv": "^8.2.0",
-    "husky": "^3.0.0",
-    "lint-staged": "^9.1.0",
-    "prompts": "^2.3.2",
-    "semantic-release": "^15.14.0"
+    "dotenv": "^16.3.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prompts": "^2.4.2",
+    "semantic-release": "^22.0.1"
   }
 }
