--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ejhammond/jskit",
   "version": "5.0.0",
+  "nonce": "1",
   "author": "EJ Hammond <ejhammond@hey.com>",
   "description": "Common configurations for js/ts projects",
   "repository": "https://github.com/ejhammond/jskit",
