--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@ejhammond/jskit",
   "version": "5.0.1",
-  "nonce": "2",
+  "nonce": "3",
   "author": "EJ Hammond <ejhammond@hey.com>",
   "description": "Common configurations for js/ts projects",
-  "repository": "https://github.com/ejhammond/jskit",
+  "repository": {
+    "url": "git+https://github.com/ejhammond/jskit.git"
+  },
   "publishConfig": {
     "access": "public"
   },
